fichier de demo commence et tests bien avancee, force ensuite pour finir par contact

--- a/moteur_physique/moteur_physique/imgui.ini
+++ b/moteur_physique/moteur_physique/imgui.ini
@@ -18,3 +18,8 @@ Pos=757,139
 Size=465,457
 Collapsed=0
 
+[Window][Vous pouvez modifier des attributs de fonctionnement ici :]
+Pos=875,2
+Size=434,700
+Collapsed=0
+
