--- a/moteur_physique/moteur_physique/moteur_physique.vcxproj
+++ b/moteur_physique/moteur_physique/moteur_physique.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="include\Contacts\ParticleContactResolver.cpp" />
     <ClCompile Include="include\Contacts\Particlelink.cpp" />
     <ClCompile Include="include\Contacts\ParticleRod.cpp" />
+    <ClCompile Include="include\Contacts\WallContactGenerator.cpp" />
     <ClCompile Include="Main_rendu1.cpp" />
     <ClCompile Include="Main_rendu2.cpp" />
     <ClCompile Include="PhysicWorld.cpp" />
@@ -177,10 +178,12 @@
     <ClCompile Include="Sources\Forces\ParticleForceRegistry.cpp" />
     <ClCompile Include="Sources\Forces\ParticleGravity.cpp" />
     <ClCompile Include="Sources\Forces\ParticleSpring.cpp" />
-    <ClCompile Include="Sources\Utils\Timing.cpp" />
     <ClCompile Include="Sources\Vector3D\Vector3D.cpp" />
+    <ClCompile Include="TimingData.cpp" />
+    <ClCompile Include="Wall.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Headers\Wall.h" />
     <ClInclude Include="include\Contacts\NaiveParticleConctactGenerator.h" />
     <ClInclude Include="include\Forces\ParticleBuoyancy.h" />
     <ClInclude Include="include\Contacts\ParticleCable.h" />
@@ -194,7 +197,6 @@
     <ClInclude Include="include\Contacts\Particlelink.h" />
     <ClInclude Include="include\Contacts\ParticleRod.h" />
     <ClInclude Include="include\Forces\ParticleSpring.h" />
-    <ClInclude Include="include\Utils\Precision.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
     <ClInclude Include="imgui\imgui_impl_glfw.h" />
@@ -206,10 +208,13 @@
     <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="include\GLFW\glfw3.h" />
     <ClInclude Include="include\Particles\Particle.h" />
+    <ClInclude Include="include\Utils\Precision.h" />
     <ClInclude Include="include\Utils\Timing.h" />
     <ClInclude Include="include\Vector3D\Vector3D.h" />
     <ClInclude Include="include\Contacts\WallContactGenerator.h" />
     <ClInclude Include="PhysicWorld.h" />
+    <ClInclude Include="TimingData.h" />
+    <ClInclude Include="ValuesReferences.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
