toutes les fenetres IMGUI initialisee, demain test force + contact dans un main separe puis ajout au main de rendu

--- a/moteur_physique/moteur_physique/imgui.ini
+++ b/moteur_physique/moteur_physique/imgui.ini
@@ -19,7 +19,27 @@ Size=465,457
 Collapsed=0
 
 [Window][Vous pouvez modifier des attributs de fonctionnement ici :]
-Pos=875,2
+Pos=1261,17
 Size=434,700
+Collapsed=0
+
+[Window][Vous pouvez modifier des attributs de force generateur ici :]
+Pos=608,25
+Size=640,346
+Collapsed=0
+
+[Window][Vous pouvez modifier des attributs de type de contact ici :]
+Pos=1156,701
+Size=549,174
+Collapsed=0
+
+[Window][Listes de particules instanciees :]
+Pos=27,41
+Size=335,244
+Collapsed=0
+
+[Window][Vous choisir la particule/ le binome de particule qui seront affectes :]
+Pos=47,22
+Size=507,208
 Collapsed=0
 
