plus qu a tester les differentes contacts et mettre en place le champ de particules + divison si le temps

--- a/moteur_physique/moteur_physique/imgui.ini
+++ b/moteur_physique/moteur_physique/imgui.ini
@@ -19,17 +19,17 @@ Size=465,457
 Collapsed=0
 
 [Window][Vous pouvez modifier des attributs de fonctionnement ici :]
-Pos=1261,17
-Size=434,700
+Pos=1138,-4
+Size=515,700
 Collapsed=0
 
 [Window][Vous pouvez modifier des attributs de force generateur ici :]
-Pos=608,25
+Pos=11,566
 Size=640,346
 Collapsed=0
 
 [Window][Vous pouvez modifier des attributs de type de contact ici :]
-Pos=1156,701
+Pos=1024,697
 Size=549,174
 Collapsed=0
 
