Refactoring des collisions

--- a/moteur_physique/moteur_physique/moteur_physique.vcxproj
+++ b/moteur_physique/moteur_physique/moteur_physique.vcxproj
@@ -159,6 +159,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ContactResolution.cpp" />
     <ClCompile Include="DemoCube.cpp" />
     <ClCompile Include="include\Contacts\ParticleCable.cpp" />
     <ClCompile Include="include\Contacts\ParticleContact.cpp" />
