--- a/moteur_physique/moteur_physique/moteur_physique.vcxproj.filters
+++ b/moteur_physique/moteur_physique/moteur_physique.vcxproj.filters
@@ -115,6 +115,16 @@
     <ClCompile Include="ContactResolution.cpp">
       <Filter>Sources\Contacts</Filter>
     </ClCompile>
+    <ClCompile Include="Primitive.cpp" />
+    <ClCompile Include="Boite.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Plan.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="OctreeDetection.cpp" />
+    <ClCompile Include="ContactRigidBody.cpp" />
+    <ClCompile Include="RigidBodyContactResolver.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\GLFW\glfw3.h">
@@ -258,9 +268,6 @@
     <ClInclude Include="SkyBox.h">
       <Filter>Headers\SkyBox</Filter>
     </ClInclude>
-    <ClInclude Include="Sphere.h">
-      <Filter>Headers\RB</Filter>
-    </ClInclude>
     <ClInclude Include="Plan.h">
       <Filter>Headers\RB</Filter>
     </ClInclude>
@@ -276,6 +283,9 @@
     <ClInclude Include="ContactResolution.h">
       <Filter>Headers\Contacts</Filter>
     </ClInclude>
+    <ClInclude Include="OctreeDetection.h" />
+    <ClInclude Include="ContactRigidBody.h" />
+    <ClInclude Include="RigidBodyContactResolver.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Sources">
